--- a/index.html
+++ b/index.html
@@ -36,9 +36,37 @@
          <h4>London</h4>
 
       <a href="projects.html" class="btn btn-branding" target="_blank"> Contact me</a>
+    </div>
 
+    <h2 class="text-center m-5">Featured Projects I have worked on</h2>
+
+
+<div class="container">
+    <div class="row">
+    <div class="col-6">
+
+     <h3>Generative AI Project</h3>
+
+     <p>I recently completed a dynamic AI Generative project centered around crafting comical Irish Limericks. 
+Utilizing JavaScript, I engineered prompts to guide the AI model, ensuring culturally relevant and 
+humorous output. My expertise included API integration for language model access, prompt engineering 
+for fine-tuning, and effective use of GitHub for version control and collaboration. The project, hosted on a website, 
+showcases my skills in deploying interactive platforms for users to enjoy and contribute to the playful world of 
+Irish limerick generation. This endeavor not only sharpened my coding abilities but also demonstrated proficiency 
+in AI, JavaScript, API integration, prompt engineering, GitHub, and web hosting.</p>
+
+       <a href="https://3potsofgold.netlify.app/" target="_blank" class="btn btn-outline-dark" >Try it out</a>
+     </div>
+     </div>
+
+    <div class="col-6">
+
+        <img src="">
 
     </div>
+    
+
+
     <div class="container-fluid">
         <i class="fa-brands fa-instagram fa-lg" style="color: rgb(41, 37, 37);"></i>
         <i class="fa-brands fa-linkedin fa-lg" style="color: rgb(41, 37, 37);"></i>
@@ -48,5 +76,6 @@
           style="color: rgb(41, 37, 37);"
         ></i>
       </div>
+
   </body>
 </html>
