--- a/about.html
+++ b/about.html
@@ -27,28 +27,47 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-
   </head>
   <body>
+    <div class="hero">
+      <h3 class="mb-5">Frontend Developer</h3>
+      <h1>Dawn-Louise Hughes</h1>
+      <h4>London</h4>
+      <a href="projects.html" class="btn btn-branding" target="_blank"
+        >Contact me</a
+      >
+    </div>
+
     <div class="about-section container">
-        <div class="row">
-            <div class="col-6">
-    <h1>Hi, I am Dawn Hughes</h1>
-    <h2>Frontend Developer, London</h2>
-       <p>Check out some of the projects I have been working on over the past year to gain skills 
-       and knowledge in frontend development</p>
+      <div class="row">
+        <div class="about-me container">
+          <div class="text-center text-md-start">
+            <div class="col-md-6">
+              <h1 class="mt-5">Frontend Developer, London</h1>
+              <h2 class="mt-5">Skills and Knowledge</h2>
+              <p>
+                HTML, CSS, JavaScript :<br />
+                API Integration: <br />
+                Prompt Engineering: <br />
+                AI Integration:<br />
+                GitHub Collaboration:<br />
+                Web Hosting Proficiency:
+              </p>
+              <br />
+              <a href="*" class="btn btn-outline-dark mb-5">Projects</a>
+            </div>
+          </div>
+        </div>
 
-       </div>
-
-<div class="col-6">
-       <img src="img/dawn.png" alt="Me" class="img-fluid"/>
-</div>
-
-       <a href="*">Completed Projects</a> <a href="">Current Projects</a>
-
-       </div>
-      
-
-    </h1>
+        <div class="col-md-6 d-none d-md-block">
+          <img
+            class="profile-image"
+            src="img/dawn.png"
+            alt="Me"
+            class="img-fluid"
+          />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
