Added about button
Wanted easy way to get to about page so added button to index

--- a/index.html
+++ b/index.html
@@ -135,8 +135,9 @@ in AI, JavaScript, API integration, prompt engineering, GitHub, and web hosting.
        </div>
      </div>
     
-      
-
+      <div class="text-center">
+ <a href="about.html" class="btn btn-outline-dark mb-5">ABOUT</a>
+ </div>
 
     <div class="container-fluid">
         <i class="fa-brands fa-instagram fa-lg" style="color: rgb(41, 37, 37);"></i>
