--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <h3 class="text-center m-5">Featured Projects I have worked on</h3>
 
 
-<div class="container">
+<div class=" content-container container">
     <div class="row mb-5">
     <div class="col d-none d-lg-block">
       <img src="img/AI.png" class="img-fluid" alt="AI image of project">
@@ -137,6 +137,9 @@ in AI, JavaScript, API integration, prompt engineering, GitHub, and web hosting.
     
       <div class="text-center">
  <a href="about.html" class="btn btn-outline-dark mb-5">ABOUT</a>
+ </div>
+   <div class="text-center">
+ <a href="work.html" class="btn btn-outline-dark mb-5">Work</a>
  </div>
 
     <div class="container-fluid">
