--- a/about.html
+++ b/about.html
@@ -38,14 +38,13 @@
       >
     </div>
 
-    <div class="about-section container">
+    <div class="content-container container">
       <div class="row">
-        <div class="about-me container">
+        <div class="about-me col">
           <div class="text-center text-md-start">
             <div class="col-md-6">
-              <h1 class="mt-5">Frontend Developer, London</h1>
-              <h2 class="mt-5">Skills and Knowledge</h2>
-              <p>
+              <h1 class="mb-5 mt-5">Frontend Developer</h1>
+              <p class="mb-4">
                 HTML, CSS, JavaScript :<br />
                 API Integration: <br />
                 Prompt Engineering: <br />
@@ -60,14 +59,15 @@
         </div>
 
         <div class="col-md-6 d-none d-md-block">
-          <img
-            class="profile-image"
-            src="img/dawn.png"
-            alt="Me"
-            class="img-fluid"
-          />
+          <img class="mb-5 profile-image" src="img/dawn.png" alt="Me" />
         </div>
       </div>
+    </div>
+
+    <div class="text-center">
+      <a href="index.html" class="btn btn-outline-dark mb-5" target="_blank "
+        >Back to Homepage</a
+      >
     </div>
   </body>
 </html>
