--- a/work.html
+++ b/work.html
@@ -40,7 +40,7 @@
       </div>
       <div class="content-container container">
         <div class="content">
-          <h1 class="mb-4">Take a look at my work</h1>
+          <h1 class="mb-5 mt-5">Take a look at my work</h1>
 
           <div class="row">
             <div class="col-md-6">
@@ -59,7 +59,7 @@
           <div class="row">
             <div class="col-md-6">
               <img src="img/Worldclock!.png" class="img-fluid" alt="" />
-              <h3 class="text-center">Worldclock Project</h3>
+              <h3 class="text-center">World Clock Project</h3>
               <p class="text-center">Built with HTML and CSS</p>
             </div>
 
