--- a/work.html
+++ b/work.html
@@ -75,6 +75,10 @@
       <div class="text-center">
         <a href="index.html" class="btn btn-outline-dark mb-5">Home</a>
       </div>
+
+      <div class="text-center">
+        <a href="contact.html" class="btn btn-outline-dark mb-5">Contact me</a>
+      </div>
     </body>
   </head>
 </html>
