--- a/about.html
+++ b/about.html
@@ -29,6 +29,17 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flexjustify-content-between">
+        <img src="" />
+        <ul>
+          <li class="active"><a href="index.html">Homepage</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="work.html">Projects</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="hero">
       <h3 class="mb-5">Frontend Developer</h3>
       <h1>Dawn-Louise Hughes</h1>
@@ -63,11 +74,33 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="d-flex justify-content-center mb-5">
+        <a href="malito:dawnhughesnow@gmail.com" class="email-link"
+          >dawnhughesnow@gmail.com</a
+        >
+      </div>
 
-    <div class="text-center">
-      <a href="index.html" class="btn btn-outline-dark mb-5" target="_blank "
-        >Back to Homepage</a
-      >
-    </div>
+      <div class="social-links d-flex justify-content-center mb-5">
+        <a href=""
+          ><i
+            class="fa-brands fa-instagram fa-lg"
+            style="color: rgb(41, 37, 37)"
+          ></i
+        ></a>
+        <a href=""
+          ><i
+            class="fa-brands fa-linkedin fa-lg"
+            style="color: rgb(41, 37, 37)"
+          ></i
+        ></a>
+        <a href="https://github.com/FedDawb"
+          ><i
+            class="fa-brands fa-github fa-lg"
+            style="color: rgb(41, 37, 37)"
+          ></i
+        ></a>
+      </div>
+    </footer>
   </body>
 </html>
