Some final checks

--- a/about.html
+++ b/about.html
@@ -33,8 +33,8 @@
       <nav class="d-flexjustify-content-between">
         <img src="" />
         <ul>
-          <li class="active"><a href="index.html">Homepage</a></li>
-          <li><a href="about.html">About Me</a></li>
+          <li><a href="index.html">Homepage</a></li>
+          <li class="active"><a href="about.html">About Me</a></li>
           <li><a href="work.html">Projects</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -101,6 +101,13 @@
           ></i
         ></a>
       </div>
+
+      <p class="text-center mt-5">
+        This site was coded by Dawn-Louise Hughes and is open-sourced on
+        <a href="https://github.com/FedDawb/Portfolio-Challenge" target="_blank"
+          >Github</a
+        >
+      </p>
     </footer>
   </body>
 </html>
