--- a/work.html
+++ b/work.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="Dawn is a Frontend Developer based in London, England"
+    />
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -32,10 +36,12 @@
         <nav class="d-flexjustify-content-between">
           <img src="" />
           <ul>
-            <li class="active"><a href="index.html">Homepage</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="work.html">Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html" title="homepage">Homepage</a></li>
+            <li><a href="about.html" title="About Me">About Me</a></li>
+            <li class="active" title="My Projects">
+              <a href="work.html">Projects</a>
+            </li>
+            <li><a href="contact.html" title="Contact Dawn">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -56,13 +62,25 @@
 
           <div class="row">
             <div class="col-md-6">
-              <img src="img/xfit.png" class="img-fluid" alt="" />
+              <a
+                href="https://www.shecodes.io/cohorts/shecodes-basics-add-on-aa8bf688-348f-4e28-87d7-063bb6036df0/projects/1505053"
+                target="_blank"
+                ><img
+                  src="img/xfit.png"
+                  class="img-fluid"
+                  alt="Link to view finished page"
+              /></a>
               <h3 class="text-center">Website Project</h3>
               <p class="text-center">Built with HTML and CSS</p>
             </div>
 
             <div class="col-md-6">
-              <img src="img/Weatherapp!.png" class="img-fluid" alt="" />
+              <a href="https://fedawbweatherapp.netlify.app/" target="_blank">
+                <img
+                  src="img/Weatherapp!.png"
+                  class="img-fluid"
+                  alt="Links to funtional weather app"
+              /></a>
               <h3 class="text-center">Weather Application</h3>
               <p class="text-center">Built with HTML and CSS</p>
             </div>
@@ -70,13 +88,23 @@
 
           <div class="row">
             <div class="col-md-6">
-              <img src="img/Worldclock!.png" class="img-fluid" alt="" />
+              <a href="https://world-clocksilver.netlify.app/" target="_blank"
+                ><img
+                  src="img/Worldclock!.png"
+                  class="img-fluid"
+                  alt="Links to funtional World Clock"
+              /></a>
               <h3 class="text-center">World Clock Project</h3>
               <p class="text-center">Built with HTML and CSS</p>
             </div>
 
             <div class="col-md-6">
-              <img src="img/AIGenerator!.png" class="img-fluid" alt="" />
+              <a href="https://3potsofgold.netlify.app/" target="_blank"
+                ><img
+                  src="img/AIGenerator!.png"
+                  class="img-fluid"
+                  alt="Generative AI project link"
+              /></a>
               <h3 class="text-center">AI Generator Project</h3>
               <p class="text-center">Built with HTML and CSS</p>
             </div>
@@ -111,6 +139,14 @@
             ></i
           ></a>
         </div>
+        <p class="text-center mt-5">
+          This site was coded by Dawn-Louise Hughes and is open-sourced on
+          <a
+            href="https://github.com/FedDawb/Portfolio-Challenge"
+            target="_blank"
+            >Github</a
+          >
+        </p>
       </footer>
     </body>
   </head>
