--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
 
       <div class="content-container container">
         <div class="content text-center">
-      <h1 class="mb-5">Get In Touch</h1>
+      <h1 class="mb-5 mt-5">Get In Touch</h1>
       <h3>Email</h3>
       <p>
         <a href="mailto:dawnhughesnow@gmail.com">dawnhughesnow@gmail.com</a></p>
