--- a/about.html
+++ b/about.html
@@ -55,13 +55,17 @@
           <div class="text-center text-md-start">
             <div class="col-md-6">
               <h1 class="mb-5 mt-5">Frontend Developer</h1>
-              <p class="mb-4">
+              <p class="mb-4 mt-5">
                 HTML, CSS, JavaScript :<br />
+                VSCode:<br />
                 API Integration: <br />
                 Prompt Engineering: <br />
                 AI Integration:<br />
                 GitHub Collaboration:<br />
-                Web Hosting Proficiency:
+                Web Hosting Proficiency:<br />
+                Flexbox: <br />
+                Search Engine Optimisation (SEO):<br />
+                Responsive: <br />
               </p>
               <br />
               <a href="*" class="btn btn-outline-dark mb-5">Projects</a>
@@ -70,7 +74,11 @@
         </div>
 
         <div class="col-md-6 d-none d-md-block">
-          <img class="mb-5 profile-image" src="img/dawn.png" alt="Me" />
+          <img
+            class="mb-5 profile-image"
+            src="img/dawn.png"
+            alt="Picture of Dawn"
+          />
         </div>
       </div>
     </div>
