--- a/work.html
+++ b/work.html
@@ -82,7 +82,7 @@
                   alt="Links to funtional weather app"
               /></a>
               <h3 class="text-center">Weather Application</h3>
-              <p class="text-center">Built with HTML and CSS</p>
+              <p class="text-center">Built with HTML,CSS and JavaScript</p>
             </div>
           </div>
 
@@ -95,7 +95,7 @@
                   alt="Links to funtional World Clock"
               /></a>
               <h3 class="text-center">World Clock Project</h3>
-              <p class="text-center">Built with HTML and CSS</p>
+              <p class="text-center">Built with HTML, CSS and JavaScript</p>
             </div>
 
             <div class="col-md-6">
@@ -106,7 +106,7 @@
                   alt="Generative AI project link"
               /></a>
               <h3 class="text-center">AI Generator Project</h3>
-              <p class="text-center">Built with HTML and CSS</p>
+              <p class="text-center">Built with HTML, CSS and JavaScript</p>
             </div>
           </div>
         </div>
