centered Index text

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     </div>
 
 <div class="col">
+ <div class="text-center text-md-start">
   <div class="project-description">
      <h3 class="mb-5">Generative AI Project</h3>
      <p class="mb-5">I recently completed a dynamic AI Generative project centered around crafting comical Irish Limericks. 
@@ -72,6 +73,7 @@ in AI, JavaScript, API integration, prompt engineering, GitHub, and web hosting.
 
        <a href="https://3potsofgold.netlify.app/" target="_blank" class="btn btn-outline-dark" >Try it out</a>
        </div>
+       </div>
        </div> 
       </div>
      </div>
@@ -81,6 +83,7 @@ in AI, JavaScript, API integration, prompt engineering, GitHub, and web hosting.
 
   <div class="row mb-5">
 <div class="col">
+   <div class="text-center text-md-start">
   <div class="project-description">
      <h3 class="mb-5">Weather Application</h3>
      <p class="mb-5">In my recent weather application project, I seamlessly integrated JavaScript to create a 
@@ -95,6 +98,7 @@ in AI, JavaScript, API integration, prompt engineering, GitHub, and web hosting.
 
        </div>
        </div>
+       </div>
        <div class="col d-none d-lg-block">
       <img src="img/weather.png" class="img-fluid" alt="Weather App project">
      </div>
@@ -106,6 +110,7 @@ in AI, JavaScript, API integration, prompt engineering, GitHub, and web hosting.
        </div>
 
 <div class="col">
+  <div class="text-center text-md-start">
   <div class="project-description">
      <h3 class="mb-5">World Clock Project</h3>
      <p class="mb-5">In my recent project developing a world clock application, I employed JavaScript to 
@@ -121,6 +126,7 @@ in AI, JavaScript, API integration, prompt engineering, GitHub, and web hosting.
 
        </div>
        </div>
+       </div>
       </div>
      </div>
     </div>
@@ -128,6 +134,7 @@ in AI, JavaScript, API integration, prompt engineering, GitHub, and web hosting.
 
   <div class="row mb-5">
  <div class="col">
+  <div class="text-center text-md-start">
   <div class="project-description">
      <h3 class="mb-5">Website Project</h3>
      <p class="mb-5">In developing a basic website, I harnessed my skills in HTML, CSS, and JavaScript to craft an 
@@ -141,6 +148,7 @@ in AI, JavaScript, API integration, prompt engineering, GitHub, and web hosting.
        <a href="https://www.shecodes.io/cohorts/shecodes-basics-add-on-aa8bf688-348f-4e28-87d7-063bb6036df0/projects/1505053" target="_blank" class="btn btn-outline-dark" >Try it out</a>
 
        </div>
+      </div>
       </div>
       <div class="col d-none d-lg-block">
       <img src="img/xfit.png" class="img-fluid" alt="Crossfit project">
