fixing little bugs and css

--- a/about.html
+++ b/about.html
@@ -44,8 +44,12 @@
       <h3 class="mb-5">Frontend Developer</h3>
       <h1>Dawn-Louise Hughes</h1>
       <h4>London</h4>
-      <a href="projects.html" class="btn btn-branding" target="_blank"
-        >Contact me</a
+      <a
+        href="malito:dawnhughesnow@gmail.com"
+        class="email-link"
+        target="_blank"
+      >
+        Contact</a
       >
     </div>
 
