--- a/contact.html
+++ b/contact.html
@@ -45,10 +45,14 @@
 
         <h4>London</h4>
 
-        <a href="projects.html" class="btn btn-branding" target="_blank">
-          Contact me</a
-        >
-      </div>
+       <a
+        href="malito:dawnhughesnow@gmail.com"
+        class="email-link"
+        target="_blank"
+      >
+        Contact</a
+      >
+    </div>
 
       <div class="content-container container">
         <div class="content text-center">
