--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
          <h4>London</h4>
 
-      <a href="projects.html" class="btn btn-branding" target="_blank"> Contact me</a>
+      <a href="malito:dawnhughesnow@gmail.com" class="email-link" target="_blank"> Contact</a>
     </div>
 
     <h3 class="text-center m-5">Featured Projects I have worked on</h3>
