--- a/work.html
+++ b/work.html
@@ -1,153 +1,102 @@
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="viewport"
-      content="Dawn is a Frontend Developer based in London, England"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <title>Dawn-Louise Hughes- Front End Developer</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/030f0a908c.js"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-    <body>
-      <div class="container">
-        <nav class="d-flexjustify-content-between">
-          <img src="" />
-          <ul>
-            <li><a href="index.html" title="homepage">Homepage</a></li>
-            <li><a href="about.html" title="About Me">About Me</a></li>
-            <li class="active" title="My Projects">
-              <a href="work.html">Projects</a>
-            </li>
-            <li><a href="contact.html" title="Contact Dawn">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <title>Dawn-Louise Hughes- Front End Developer</title>
 
-      <div class="hero">
-        <h3 class="mb-5">Frontend Developer</h3>
-        <h1>Dawn-Louise Hughes</h1>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/030f0a908c.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css" />
 
-        <h4>London</h4>
+</head>
 
-        <a href="projects.html" class="btn btn-branding" target="_blank">
-          Contact me</a
-        >
-      </div>
-      <div class="content-container container">
-        <div class="content">
-          <h1 class="mb-5 mt-5">Take a look at my work</h1>
+<body>
+  <div class="container">
+    <nav class="d-flexjustify-content-between">
+      <img src="" />
+      <ul>
+        <li><a href="index.html" title="homepage">Homepage</a></li>
+        <li><a href="about.html" title="About Me">About Me</a></li>
+        <li class="active" title="My Projects">
+          <a href="work.html">Projects</a>
+        </li>
+        <li><a href="contact.html" title="Contact Dawn">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
 
-          <div class="row">
-            <div class="col-md-6">
-              <a
-                href="https://www.shecodes.io/cohorts/shecodes-basics-add-on-aa8bf688-348f-4e28-87d7-063bb6036df0/projects/1505053"
-                target="_blank"
-                ><img
-                  src="img/xfit.png"
-                  class="img-fluid"
-                  alt="Link to view finished page"
-              /></a>
-              <h3 class="text-center">Website Project</h3>
-              <p class="text-center">Built with HTML and CSS</p>
-            </div>
+  <div class="hero">
+    <h3 class="mb-5">Frontend Developer</h3>
+    <h1>Dawn-Louise Hughes</h1>
 
-            <div class="col-md-6">
-              <a href="https://fedawbweatherapp.netlify.app/" target="_blank">
-                <img
-                  src="img/Weatherapp!.png"
-                  class="img-fluid"
-                  alt="Links to funtional weather app"
-              /></a>
-              <h3 class="text-center">Weather Application</h3>
-              <p class="text-center">Built with HTML,CSS and JavaScript</p>
-            </div>
-          </div>
+    <h4>London</h4>
 
-          <div class="row">
-            <div class="col-md-6">
-              <a href="https://world-clocksilver.netlify.app/" target="_blank"
-                ><img
-                  src="img/Worldclock!.png"
-                  class="img-fluid"
-                  alt="Links to funtional World Clock"
-              /></a>
-              <h3 class="text-center">World Clock Project</h3>
-              <p class="text-center">Built with HTML, CSS and JavaScript</p>
-            </div>
+   <a href="malito:dawnhughesnow@gmail.com" class="email-link" target="_blank"> Contact</a>
+    </div>
+  <div class="content-container container">
+    <div class="content">
+      <h1 class="mb-5 mt-5">Take a look at my work</h1>
 
-            <div class="col-md-6">
-              <a href="https://3potsofgold.netlify.app/" target="_blank"
-                ><img
-                  src="img/AIGenerator!.png"
-                  class="img-fluid"
-                  alt="Generative AI project link"
-              /></a>
-              <h3 class="text-center">AI Generator Project</h3>
-              <p class="text-center">Built with HTML, CSS and JavaScript</p>
-            </div>
-          </div>
+      <div class="row">
+        <div class="col-md-6">
+          <a href="https://www.shecodes.io/cohorts/shecodes-basics-add-on-aa8bf688-348f-4e28-87d7-063bb6036df0/projects/1505053"
+            target="_blank"><img src="img/xfit.png" class="img-fluid" alt="Link to view finished page" /></a>
+          <h3 class="text-center">Website Project</h3>
+          <p class="text-center">Built with HTML and CSS</p>
+        </div>
+
+        <div class="col-md-6">
+          <a href="https://fedawbweatherapp.netlify.app/" target="_blank">
+            <img src="img/Weatherapp!.png" class="img-fluid" alt="Links to funtional weather app" /></a>
+          <h3 class="text-center">Weather Application</h3>
+          <p class="text-center">Built with HTML,CSS and JavaScript</p>
         </div>
       </div>
 
-      <footer>
-        <div class="d-flex justify-content-center mb-5">
-          <a href="malito:dawnhughesnow@gmail.com" class="email-link"
-            >dawnhughesnow@gmail.com</a
-          >
+      <div class="row">
+        <div class="col-md-6">
+          <a href="https://world-clocksilver.netlify.app/" target="_blank"><img src="img/Worldclock!.png"
+              class="img-fluid" alt="Links to funtional World Clock" /></a>
+          <h3 class="text-center">World Clock Project</h3>
+          <p class="text-center">Built with HTML, CSS and JavaScript</p>
         </div>
 
-        <div class="social-links d-flex justify-content-center mb-5">
-          <a href=""
-            ><i
-              class="fa-brands fa-instagram fa-lg"
-              style="color: rgb(41, 37, 37)"
-            ></i
-          ></a>
-          <a href=""
-            ><i
-              class="fa-brands fa-linkedin fa-lg"
-              style="color: rgb(41, 37, 37)"
-            ></i
-          ></a>
-          <a href="https://github.com/FedDawb"
-            ><i
-              class="fa-brands fa-github fa-lg"
-              style="color: rgb(41, 37, 37)"
-            ></i
-          ></a>
+        <div class="col-md-6">
+          <a href="https://3potsofgold.netlify.app/" target="_blank"><img src="img/AIGenerator!.png" class="img-fluid"
+              alt="Generative AI project link" /></a>
+          <h3 class="text-center">AI Generator Project</h3>
+          <p class="text-center">Built with HTML, CSS and JavaScript</p>
         </div>
-        <p class="text-center mt-5">
-          This site was coded by Dawn-Louise Hughes and is open-sourced on
-          <a
-            href="https://github.com/FedDawb/Portfolio-Challenge"
-            target="_blank"
-            >Github</a
-          >
-        </p>
-      </footer>
-    </body>
-  </head>
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    <div class="d-flex justify-content-center mb-5">
+      <a href="malito:dawnhughesnow@gmail.com" class="email-link">dawnhughesnow@gmail.com</a>
+    </div>
+
+    <div class="social-links d-flex justify-content-center mb-5">
+      <a href=""><i class="fa-brands fa-instagram fa-lg" style="color: rgb(41, 37, 37)"></i></a>
+      <a href=""><i class="fa-brands fa-linkedin fa-lg" style="color: rgb(41, 37, 37)"></i></a>
+      <a href="https://github.com/FedDawb"><i class="fa-brands fa-github fa-lg" style="color: rgb(41, 37, 37)"></i></a>
+    </div>
+    <p class="text-center mt-5">
+      This site was coded by Dawn-Louise Hughes and is open-sourced on
+      <a href="https://github.com/FedDawb/Portfolio-Challenge" target="_blank">Github</a>
+    </p>
+  </footer>
+</body>
+</head>
+
 </html>
