--- a/work.html
+++ b/work.html
@@ -30,6 +30,7 @@
         <li class="active" title="My Projects">
           <a href="work.html">Projects</a>
         </li>
+        <li><a href="dev.html">In development</a></li>
         <li><a href="contact.html" title="Contact Dawn">Contact</a></li>
       </ul>
     </nav>
