--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@
           <li><a href="index.html">Homepage</a></li>
           <li><a href="about.html">About Me</a></li>
           <li><a href="work.html">Projects</a></li>
+          <li><a href="dev.html">In development</a></li>
           <li class="active"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
