Update links and css for pages

--- a/about.html
+++ b/about.html
@@ -3,123 +3,179 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="about.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <title>Dawn-Louise Hughes- Front End Developer</title>
+    <title>Dawn-Louise Hughes - Frontend Developer</title>
 
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Font Awesome -->
     <script
       src="https://kit.fontawesome.com/030f0a908c.js"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
   </head>
   <body>
+    <!-- Navbar -->
     <div class="container">
-      <nav class="d-flexjustify-content-between">
-        <img src="" />
-        <ul>
-          <li><a href="index.html">Homepage</a></li>
-          <li class="active"><a href="about.html">About Me</a></li>
-          <li><a href="work.html">Projects</a></li>
-          <li><a href="dev.html">In development</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-    <div class="hero">
-      <h3 class="mb-5">Frontend Developer</h3>
-      <h1>Dawn-Louise Hughes</h1>
-      <h4>London</h4>
-      <a
-        href="malito:dawnhughesnow@gmail.com"
-        class="email-link"
-        target="_blank"
-      >
-        Contact</a
-      >
+      <nav class="d-flex justify-content-between align-items-center">
+  <img src="" />
+  <ul class="nav-links">
+    <li><a href="index.html">Homepage</a></li>
+    <li class="active"><a href="about.html">About Me</a></li>
+    <li><a href="work.html">Projects</a></li>
+    <li><a href="dev.html">In development</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
     </div>
 
-    <div class="content-container container">
-      <div class="row">
-        <div class="about-me col">
-          <div class="text-center text-md-start">
-            <div class="col-md-6">
-              <h1 class="mb-5 mt-5">Frontend Developer</h1>
-              <p class="mb-4 mt-5">
-                HTML, CSS, JavaScript :<br />
-                VSCode:<br />
-                API Integration: <br />
-                Prompt Engineering: <br />
-                AI Integration:<br />
-                GitHub Collaboration:<br />
-                Web Hosting Proficiency:<br />
-                Flexbox: <br />
-                Search Engine Optimisation (SEO):<br />
-                Responsive: <br />
-              </p>
-              <br />
-              <a href="*" class="btn btn-outline-dark mb-5">Projects</a>
-            </div>
-          </div>
+    <!-- About Me Section -->
+    <section class="about-section container">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <h1 class="mb-4">About Me</h1>
+          <p class="intro-text">
+            Hi, I’m <strong>Dawn</strong> a <strong>Frontend Developer</strong> 
+            passionate about building responsive, accessible, and user-friendly web applications. 
+            With a strong foundation in <strong>HTML, CSS, JavaScript, and React</strong>, I enjoy 
+            turning ideas into clean, functional designs.  
+          </p>
+
+          <p class="intro-text">
+            Alongside frontend development, I’ve explored <strong>Python, SQL, and Flask APIs</strong> 
+            to strengthen my full-stack understanding, giving me the ability to integrate front-end 
+            projects with backend services and databases.
+          </p>
+
+          <h2 class="section-title">Courses Completed</h2>
+          <ul class="skills-list">
+          <ul class="skills-list">
+
+
+
+    <li>
+    Advanced Responsive Web Development with
+  <a href="https://www.shecodes.io/certificates/0359fbcad40c287fd3372405dc7cffe9?_gl=1*19mbboh*_gcl_au*MTc2NDg4NTE0NC4xNzU2NzkxNzA2" target="_blank" rel="noopener noreferrer">
+    Shecodes
+  </a>
+  </li>
+
+   <li>
+    Advanced React Development with
+  <a href="https://www.shecodes.io/certificates/207bb14d4022de95d65be8d11ef82f7a?_gl=1*bmd6gz*_gcl_au*MTc2NDg4NTE0NC4xNzU2NzkxNzA2" target="_blank" rel="noopener noreferrer">
+    Shecodes
+  </a>
+  </li>
+
+  <li>
+    Front-End Development with
+  <a href="https://www.shecodes.io/diplomas/2cc01d9232ebd46cf32fd3154886f8b0" target="_blank" rel="noopener noreferrer">
+    Shecodes
+  </a>
+  </li>
+  <li>
+    Software and Data Engineering Degree with 
+  <a href="https://codefirstgirls.com/courses/cfgdegree/" target="_blank" rel="noopener noreferrer">
+    Code First Girls
+  </a>
+  </li>
+  <li>
+   Cyber Security Masters with 
+  <a href="https://codefirstgirls.com/courses/masters/" target="_blank" rel="noopener noreferrer">
+    Code First Girls
+  </a>
+  </li>
+</ul>
+
+
+          <h2 class="section-title">Technical Skills</h2>
+<div class="skills-grid">
+  <div class="skill-item">
+    <i class="fa-brands fa-html5"></i>
+    <p>HTML5</p>
+  </div>
+  <div class="skill-item">
+    <i class="fa-brands fa-css3-alt"></i>
+    <p>CSS3</p>
+  </div>
+  <div class="skill-item">
+    <i class="fa-brands fa-js"></i>
+    <p>JavaScript</p>
+  </div>
+  <div class="skill-item">
+    <i class="fa-brands fa-react"></i>
+    <p>React</p>
+  </div>
+  <div class="skill-item">
+    <i class="fa-solid fa-database"></i>
+    <p>SQL</p>
+  </div>
+  <div class="skill-item">
+    <i class="fa-brands fa-python"></i>
+    <p>Python</p>
+  </div>
+  <div class="skill-item">
+    <i class="fa-brands fa-github"></i>
+    <p>GitHub</p>
+  </div>
+  <div class="skill-item">
+    <i class="fa-solid fa-cloud"></i>
+    <p>AWS</p>
+  </div>
+</div>
+
+
+          <a href="work.html" class="btn btn-branding mt-4">See My Projects</a>
         </div>
 
-        <div class="col-md-6 d-none d-md-block">
+        <!-- Profile Image -->
+        <div class="col-md-6 text-center">
           <img
-            class="mb-5 profile-image"
+            class="profile-image"
             src="img/dawn.png"
             alt="Picture of Dawn"
           />
         </div>
       </div>
-    </div>
+    </section>
+
+    <!-- Footer -->
     <footer>
       <div class="d-flex justify-content-center mb-5">
-        <a href="malito:dawnhughesnow@gmail.com" class="email-link"
-          >dawnhughesnow@gmail.com</a
-        >
+        <a href="mailto:dawnhughesnow@gmail.com" class="email-link">
+          dawnhughesnow@gmail.com
+        </a>
       </div>
 
       <div class="social-links d-flex justify-content-center mb-5">
-        <a href=""
-          ><i
-            class="fa-brands fa-instagram fa-lg"
-            style="color: rgb(41, 37, 37)"
-          ></i
-        ></a>
-        <a href=""
-          ><i
-            class="fa-brands fa-linkedin fa-lg"
-            style="color: rgb(41, 37, 37)"
-          ></i
-        ></a>
-        <a href="https://github.com/FedDawb"
-          ><i
-            class="fa-brands fa-github fa-lg"
-            style="color: rgb(41, 37, 37)"
-          ></i
-        ></a>
+        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+          <i class="fa-brands fa-instagram fa-lg"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/dawn-hughes-a033922b2/" target="_blank" rel="noopener noreferrer">
+          <i class="fa-brands fa-linkedin fa-lg"></i>
+        </a>
+        <a href="https://github.com/FedDawb" target="_blank" rel="noopener noreferrer">
+          <i class="fa-brands fa-github fa-lg"></i>
+        </a>
       </div>
 
       <p class="text-center mt-5">
         This site was coded by Dawn-Louise Hughes and is open-sourced on
-        <a href="https://github.com/FedDawb/Portfolio-Challenge" target="_blank"
-          >Github</a
-        >
+        <a href="https://github.com/FedDawb/Portfolio-Challenge" target="_blank">
+          GitHub
+        </a>
       </p>
     </footer>
   </body>
