--- a/projects.html
+++ b/projects.html
@@ -1,119 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dawn-Louise Hughes - Projects</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="about.css" />
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <script
+    src="https://kit.fontawesome.com/030f0a908c.js"
+    crossorigin="anonymous"
+  ></script>
 </head>
 <body>
-    
 
+<!-- Navbar -->
+<div class="container">
+  <nav class="d-flex justify-content-between align-items-center">
+    <img src="" alt="Logo" />
+    <ul class="nav-links">
+      <li><a href="index.html">Homepage</a></li>
+      <li><a href="about.html">About Me</a></li>
+      <li class="active"><a href="work.html">Projects</a></li>
+      <li><a href="dev.html">In development</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</div>
 
-     <h3 class="text-center m-5">Featured Projects I have worked on</h3>
+<!-- Projects Section -->
+<section class="projects-section container my-5">
+  <h1 class="text-center mb-5">Featured Projects</h1>
+  </section>
 
+<!-- Footer -->
+<footer>
+  <div class="d-flex justify-content-center mb-5">
+    <a href="mailto:dawnhughesnow@gmail.com" class="email-link">dawnhughesnow@gmail.com</a>
+  </div>
 
-<div class=" content-container container">
-    <div class="row mb-5">
-    <div class="col d-none d-lg-block">
-      <img src="img/AI.png" class="img-fluid" alt="AI image of project">
-    </div>
+  <div class="social-links d-flex justify-content-center mb-5">
+    <a href=""><i class="fa-brands fa-instagram fa-lg"></i></a>
+    <a href=""><i class="fa-brands fa-linkedin fa-lg"></i></a>
+    <a href="https://github.com/FedDawb"><i class="fa-brands fa-github fa-lg"></i></a>
+  </div>
 
-<div class="col">
- <div class="text-center text-md-start">
-  <div class="project-description">
-     <h3 class="mb-5">Generative AI Project</h3>
-     <p class="mb-5">I recently completed a dynamic AI Generative project centered around crafting comical Irish Limericks. 
-Utilizing JavaScript, I engineered prompts to guide the AI model, ensuring culturally relevant and 
-humorous output. My expertise included API integration for language model access, prompt engineering 
-for fine-tuning, and effective use of GitHub for version control and collaboration. The project, hosted on a website, 
-showcases my skills in deploying interactive platforms for users to enjoy and contribute to the playful world of 
-Irish limerick generation. This endeavor not only sharpened my coding abilities but also demonstrated proficiency 
-in AI, JavaScript, API integration, prompt engineering, GitHub, and web hosting.</p>
-
-       <a href="https://3potsofgold.netlify.app/" target="_blank" class="btn btn-outline-dark" >Try it out</a>
-       </div>
-       </div>
-       </div> 
-      </div>
-     </div>
-    </div>
- </div>
-
-
-  <div class="row mb-5">
-<div class="col">
-   <div class="text-center text-md-start">
-  <div class="project-description">
-     <h3 class="mb-5">Weather Application</h3>
-     <p class="mb-5">In my recent weather application project, I seamlessly integrated JavaScript to create a 
-      dynamic platform that provides real-time weather updates from various countries. My proficiency in API integration 
-      allowed users to input their desired locations into the search engine, enabling accurate and up-to-date information 
-      retrieval. I applied prompt engineering techniques to enhance user experience and streamline data presentation. 
-      The entire project, inclusive of version control and collaboration, was managed efficiently through GitHub. 
-      Furthermore, I successfully hosted the application on a website, showcasing my comprehensive 
-      skills in JavaScript, API integration, prompt engineering, GitHub, and web hosting.</p>
-
-       <a href="https://fedawbweatherapp.netlify.app/" target="_blank" class="btn btn-outline-dark" >Try it out</a>
-
-       </div>
-       </div>
-       </div>
-       <div class="col d-none d-lg-block">
-      <img src="img/weather.png" class="img-fluid" alt="Weather App project">
-     </div>
-    </div>
-
-  <div class="row mb-5">
-    <div class="col d-none d-lg-block">
-      <img src="img/wclock.png" class="img-fluid" alt="World clock project">
-       </div>
-
-<div class="col">
-  <div class="text-center text-md-start">
-  <div class="project-description">
-     <h3 class="mb-5">World Clock Project</h3>
-     <p class="mb-5">In my recent project developing a world clock application, I employed JavaScript to 
-      create a user-friendly interface that provides real-time updates from selected countries. 
-      My expertise in API integration allowed for seamless data retrieval, offering accurate and 
-      synchronized world clock information. Through prompt engineering, I optimized the application for user 
-      convenience and customization. The project's codebase was meticulously managed using GitHub, showcasing my 
-      proficiency in version control and collaborative development. Finally, I successfully hosted the world clock 
-      application on a website, demonstrating my comprehensive skills in JavaScript, 
-      API integration, prompt engineering, GitHub, and web hosting.</p>
-
-       <a href="https://world-clocksilver.netlify.app/" target="_blank" class="btn btn-outline-dark" >Try it out</a>
-
-       </div>
-       </div>
-       </div>
-      </div>
-     </div>
-    </div>
- </div>
-
-  <div class="row mb-5">
- <div class="col">
-  <div class="text-center text-md-start">
-  <div class="project-description">
-     <h3 class="mb-5">Website Project</h3>
-     <p class="mb-5">In developing a basic website, I harnessed my skills in HTML, CSS, and JavaScript to craft an 
-      intuitive and user-friendly platform. Implementing light and dark mode functionality showcased my proficiency 
-      in creating dynamic and visually appealing interfaces. Through HTML, I structured the content efficiently, while 
-      CSS allowed me to design a clean and responsive layout. JavaScript played a pivotal role in enhancing user 
-      interaction and enabling the seamless toggling between light and dark modes. This project honed my abilities in 
-      front-end web development, emphasizing a solid foundation in HTML structure, CSS styling, and 
-      JavaScript interactivity, fostering a well-rounded skill set for creating engaging and functional websites.</p>
-
-       <a href="https://www.shecodes.io/cohorts/shecodes-basics-add-on-aa8bf688-348f-4e28-87d7-063bb6036df0/projects/1505053" target="_blank" class="btn btn-outline-dark" >Try it out</a>
-
-       </div>
-      </div>
-      </div>
-      <div class="col d-none d-lg-block">
-      <img src="img/xfit.png" class="img-fluid" alt="Crossfit project">
-       </div>
-     </div>
-    
+  <p class="text-center mt-5">
+    This site was coded by Dawn-Louise Hughes and is open-sourced on
+    <a href="https://github.com/FedDawb/Portfolio-Challenge" target="_blank">Github</a>
+  </p>
+</footer>
 
 </body>
 </html>
