--- a/work.html
+++ b/work.html
@@ -1,90 +1,152 @@
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-  <title>Dawn-Louise Hughes- Front End Developer</title>
+  <title>Dawn-Louise Hughes - Projects</title>
 
+  <link rel="stylesheet" href="work.css" /> <!-- reuse your CSS for navbar/footer -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+    crossorigin="anonymous"
+  />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"
+    rel="stylesheet"
+  />
   <script src="https://kit.fontawesome.com/030f0a908c.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css" />
-
 </head>
-
 <body>
+
+  <!-- Navbar -->
   <div class="container">
-    <nav class="d-flexjustify-content-between">
+    <nav class="d-flex justify-content-between align-items-center py-3">
       <img src="" />
-      <ul>
-        <li><a href="index.html" title="homepage">Homepage</a></li>
-        <li><a href="about.html" title="About Me">About Me</a></li>
-        <li class="active" title="My Projects">
-          <a href="work.html">Projects</a>
-        </li>
-        <li><a href="dev.html">In development</a></li>
-        <li><a href="contact.html" title="Contact Dawn">Contact</a></li>
+      <ul class="nav-links">
+        <li><a href="index.html">Homepage</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li class="active"><a href="work.html">Projects</a></li>
+        <li><a href="dev.html">In Development</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </div>
 
-  <div class="hero">
-    <h3 class="mb-5">Frontend Developer</h3>
-    <h1>Dawn-Louise Hughes</h1>
+  <!-- Projects Header -->
+  <h3 class="text-center my-5">Featured Projects I Have Worked On</h3>
 
-    <h4>London</h4>
+  <div class="container">
+    <div class="row g-4">
 
-   <a href="malito:dawnhughesnow@gmail.com" class="email-link" target="_blank"> Contact</a>
-    </div>
-  <div class="content-container container">
-    <div class="content">
-      <h1 class="mb-5 mt-5">Take a look at my work</h1>
-
-      <div class="row">
-        <div class="col-md-6">
-          <a href="https://www.shecodes.io/cohorts/shecodes-basics-add-on-aa8bf688-348f-4e28-87d7-063bb6036df0/projects/1505053"
-            target="_blank"><img src="img/xfit.png" class="img-fluid" alt="Link to view finished page" /></a>
-          <h3 class="text-center">Website Project</h3>
-          <p class="text-center">Built with HTML and CSS</p>
+      <!-- Project 1 -->
+      <div class="col-md-4 project-card">
+        <img src="img/AI.png" class="img-fluid project-img mb-3" alt="Generative AI Project">
+        <div class="skills-grid mb-3">
+          <div class="skill-item"><i class="fab fa-js-square"></i><p>JavaScript</p></div>
+          <div class="skill-item"><i class="fab fa-python"></i><p>AI</p></div>
+          <div class="skill-item"><i class="fab fa-github"></i><p>GitHub</p></div>
+          <div class="skill-item"><i class="fas fa-server"></i><p>API</p></div>
         </div>
-
-        <div class="col-md-6">
-          <a href="https://fedawbweatherapp.netlify.app/" target="_blank">
-            <img src="img/Weatherapp!.png" class="img-fluid" alt="Links to funtional weather app" /></a>
-          <h3 class="text-center">Weather Application</h3>
-          <p class="text-center">Built with HTML,CSS and JavaScript</p>
-        </div>
+        <h3>Generative AI Project</h3>
+        <p>
+          Created a dynamic AI project generating comical Irish Limericks. 
+          Utilized JavaScript, API integration, prompt engineering, GitHub collaboration, and hosted on a live website.
+        </p>
+        <a href="https://3potsofgold.netlify.app/" target="_blank" class="btn btn-branding">Try it out</a>
       </div>
 
-      <div class="row">
-        <div class="col-md-6">
-          <a href="https://world-clocksilver.netlify.app/" target="_blank"><img src="img/Worldclock!.png"
-              class="img-fluid" alt="Links to funtional World Clock" /></a>
-          <h3 class="text-center">World Clock Project</h3>
-          <p class="text-center">Built with HTML, CSS and JavaScript</p>
+      <!-- Project 2 -->
+      <div class="col-md-4 project-card">
+        <img src="img/weather.png" class="img-fluid project-img mb-3" alt="Weather App Project">
+        <div class="skills-grid mb-3">
+          <div class="skill-item"><i class="fab fa-js-square"></i><p>JavaScript</p></div>
+          <div class="skill-item"><i class="fas fa-cloud-sun"></i><p>API</p></div>
+          <div class="skill-item"><i class="fab fa-github"></i><p>GitHub</p></div>
         </div>
-
-        <div class="col-md-6">
-          <a href="https://3potsofgold.netlify.app/" target="_blank"><img src="img/AIGenerator!.png" class="img-fluid"
-              alt="Generative AI project link" /></a>
-          <h3 class="text-center">AI Generator Project</h3>
-          <p class="text-center">Built with HTML, CSS and JavaScript</p>
-        </div>
+        <h3>Weather Application</h3>
+        <p>
+          Dynamic weather platform providing real-time updates. 
+          Used JavaScript, API integration, GitHub version control, and hosted for public access.
+        </p>
+        <a href="https://fedawbweatherapp.netlify.app/" target="_blank" class="btn btn-branding">Try it out</a>
       </div>
+
+      <!-- Project 3 -->
+      <div class="col-md-4 project-card">
+        <img src="img/wclock.png" class="img-fluid project-img mb-3" alt="World Clock Project">
+        <div class="skills-grid mb-3">
+          <div class="skill-item"><i class="fab fa-js-square"></i><p>JavaScript</p></div>
+          <div class="skill-item"><i class="fas fa-clock"></i><p>API</p></div>
+          <div class="skill-item"><i class="fab fa-github"></i><p>GitHub</p></div>
+        </div>
+        <h3>World Clock Project</h3>
+        <p>
+          User-friendly world clock app providing synchronized real-time updates. 
+          Skills demonstrated: JavaScript, API integration, GitHub, and prompt engineering.
+        </p>
+        <a href="https://world-clocksilver.netlify.app/" target="_blank" class="btn btn-branding">Try it out</a>
+      </div>
+
+      <!-- Project 4 -->
+      <div class="col-md-4 project-card">
+        <img src="img/webpage.png" class="img-fluid project-img mb-3" alt="Website Project">
+        <div class="skills-grid mb-3">
+          <div class="skill-item"><i class="fab fa-html5"></i><p>HTML</p></div>
+          <div class="skill-item"><i class="fab fa-css3-alt"></i><p>CSS</p></div>
+          <div class="skill-item"><i class="fab fa-js-square"></i><p>JavaScript</p></div>
+        </div>
+        <h3>Travel Website Project</h3>
+        <p>
+          Built a fully responsive website with HTML, CSS, and JavaScript. Travel website with clean layout for 
+          a user-friendly experience. Embeded google maps and instagram.
+        </p>
+        <a href="https://travelbarcelona2024.netlify.app/" target="_blank" class="btn btn-branding">Try it out</a>
+      </div>
+
+         <!-- Project 5 -->
+      <div class="col-md-4 project-card">
+        <img src="img/Dictionary.png" class="img-fluid project-img mb-3" alt="REACT Project">
+        <div class="skills-grid mb-3">
+          <div class="skill-item"><i class="fab fa-js-square"></i><p>JavaScript</p></div>
+          <div class="skill-item"><i class="fab fa-python"></i><p>AI</p></div>
+          <div class="skill-item"><i class="fab fa-github"></i><p>GitHub</p></div>
+          <div class="skill-item"><i class="fas fa-server"></i><p>API</p></div>
+        </div>
+        <h3>React Dictionary</h3>
+        <p>
+          Dictionary created using REACT. Displays image using API, Part of speech, description and Synonym using API.
+        </p>
+        <a href="https://candid-haupia-254c64.netlify.app/" target="_blank" class="btn btn-branding">Try it out</a>
+      </div>
+
+         <!-- Project 6 -->
+      <div class="col-md-4 project-card">
+        <img src="img/AI.png" class="img-fluid project-img mb-3" alt="Generative AI Project">
+        <div class="skills-grid mb-3">
+          <div class="skill-item"><i class="fab fa-js-square"></i><p>JavaScript</p></div>
+          <div class="skill-item"><i class="fab fa-python"></i><p>Python</p></div>
+          <div class="skill-item"><i class="fab fa-github"></i><p>GitHub</p></div>
+          <div class="skill-item"><i class="fas fa-server"></i><p>API</p></div>
+          <div class="skill-item"><i class="fas fa-server"></i><p>SQL</p></div>
+        </div>
+        <h3>Movie Chooser Project</h3>
+        <p>
+          Project completed in Python. Compbined front-end and back-end to build a site using API to fetch movies and data.
+        </p>
+        <a href="" target="_blank" class="btn btn-branding">Try it out</a>
+      </div>
+
     </div>
   </div>
 
+  <!-- Footer -->
   <footer>
     <div class="d-flex justify-content-center mb-5">
-      <a href="malito:dawnhughesnow@gmail.com" class="email-link">dawnhughesnow@gmail.com</a>
+      <a href="mailto:dawnhughesnow@gmail.com" class="email-link">dawnhughesnow@gmail.com</a>
     </div>
 
     <div class="social-links d-flex justify-content-center mb-5">
@@ -92,12 +154,13 @@
       <a href=""><i class="fa-brands fa-linkedin fa-lg" style="color: rgb(41, 37, 37)"></i></a>
       <a href="https://github.com/FedDawb"><i class="fa-brands fa-github fa-lg" style="color: rgb(41, 37, 37)"></i></a>
     </div>
+
     <p class="text-center mt-5">
-      This site was coded by Dawn-Louise Hughes and is open-sourced on
+      This site was coded by Dawn-Louise Hughes and is open-sourced on 
       <a href="https://github.com/FedDawb/Portfolio-Challenge" target="_blank">Github</a>
     </p>
   </footer>
-</body>
-</head>
 
+</body>
 </html>
+
