--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,8 @@
     <h1 class="mb-5">Get In Touch</h1>
     <p>I would love to hear from you!</p>
     <a href="mailto:dawnhughesnow@gmail.com" class="btn-contact">Contact Me</a>
+    <a href="assets/DawnHughes-Resume.pdf" target="_blank" class="btn-contact">View Resume</a>
+
   </div>
 </section>
 
