added updated movie project

--- a/work.html
+++ b/work.html
@@ -125,19 +125,19 @@
 
          <!-- Project 6 -->
       <div class="col-md-4 project-card">
-        <img src="img/AI.png" class="img-fluid project-img mb-3" alt="Generative AI Project">
+        <img src="img/movie.png" class="img-fluid project-img mb-3" alt="Generative AI Project">
         <div class="skills-grid mb-3">
           <div class="skill-item"><i class="fab fa-js-square"></i><p>JavaScript</p></div>
           <div class="skill-item"><i class="fab fa-python"></i><p>Python</p></div>
           <div class="skill-item"><i class="fab fa-github"></i><p>GitHub</p></div>
           <div class="skill-item"><i class="fas fa-server"></i><p>API</p></div>
-          <div class="skill-item"><i class="fas fa-server"></i><p>SQL</p></div>
+          <div class="skill-item"><i class="fas fa-database"></i><p>SQL</p></div>
         </div>
         <h3>Movie Chooser Project</h3>
         <p>
           Project completed in Python. Compbined front-end and back-end to build a site using API to fetch movies and data.
         </p>
-        <a href="" target="_blank" class="btn btn-branding">Try it out</a>
+        <a href="https://movie-chooser-hl45.onrender.com/" target="_blank" class="btn btn-branding">Try it out</a>
       </div>
 
     </div>
