--- a/work.html
+++ b/work.html
@@ -64,7 +64,7 @@
         <img src="img/weather.png" class="img-fluid project-img mb-3" alt="Weather App Project">
         <div class="skills-grid mb-3">
           <div class="skill-item"><i class="fab fa-js-square"></i><p>JavaScript</p></div>
-          <div class="skill-item"><i class="fas fa-cloud-sun"></i><p>API</p></div>
+          <div class="skill-item"><i class="fas fa-server"></i><p>API</p></div>
           <div class="skill-item"><i class="fab fa-github"></i><p>GitHub</p></div>
         </div>
         <h3>Weather Application</h3>
@@ -80,7 +80,7 @@
         <img src="img/wclock.png" class="img-fluid project-img mb-3" alt="World Clock Project">
         <div class="skills-grid mb-3">
           <div class="skill-item"><i class="fab fa-js-square"></i><p>JavaScript</p></div>
-          <div class="skill-item"><i class="fas fa-clock"></i><p>API</p></div>
+          <div class="skill-item"><i class="fas fa-server"></i><p>API</p></div>
           <div class="skill-item"><i class="fab fa-github"></i><p>GitHub</p></div>
         </div>
         <h3>World Clock Project</h3>
