Added React weather project

--- a/work.html
+++ b/work.html
@@ -47,7 +47,7 @@
         <img src="img/AI.png" class="img-fluid project-img mb-3" alt="Generative AI Project">
         <div class="skills-grid mb-3">
           <div class="skill-item"><i class="fab fa-js-square"></i><p>JavaScript</p></div>
-          <div class="skill-item"><i class="fab fa-python"></i><p>AI</p></div>
+          <div class="skill-item"><i class="fab fa-robot"></i><p>AI</p></div>
           <div class="skill-item"><i class="fab fa-github"></i><p>GitHub</p></div>
           <div class="skill-item"><i class="fas fa-server"></i><p>API</p></div>
         </div>
@@ -107,14 +107,31 @@
         <a href="https://travelbarcelona2024.netlify.app/" target="_blank" class="btn btn-branding">Try it out</a>
       </div>
 
-         <!-- Project 5 -->
+        <!-- Project 5 -->
+      <div class="col-md-4 project-card">
+  <img src="img/reactweather.png" class="img-fluid project-img mb-3" alt="REACT Weather App">
+  <div class="skills-grid mb-3">
+    <div class="skill-item"><i class="fab fa-js-square"></i><p>JavaScript</p></div>
+    <div class="skill-item"><i class="fab fa-react"></i><p>React</p></div>
+    <div class="skill-item"><i class="fas fa-server"></i><p>API</p></div>
+    <div class="skill-item"><i class="fab fa-github"></i><p>GitHub</p></div>
+  </div>
+  <h3>React Weather App</h3>
+  <p>
+    Weather application originally built with Vanilla JavaScript originally and later re-built and converted into a React application**. Fetches real-time weather data and displays temperature, humidity, wind, and forecast information using an external API.
+  </p>
+  <a href="https://newreactappps.netlify.app/" target="_blank" class="btn btn-branding">Try it out</a>
+</div>
+
+         <!-- Project 6 -->
       <div class="col-md-4 project-card">
         <img src="img/Dictionary.png" class="img-fluid project-img mb-3" alt="REACT Project">
         <div class="skills-grid mb-3">
           <div class="skill-item"><i class="fab fa-js-square"></i><p>JavaScript</p></div>
-          <div class="skill-item"><i class="fab fa-python"></i><p>AI</p></div>
+          <div class="skill-item"><i class="fab fa-robot"></i><p>AI</p></div>
           <div class="skill-item"><i class="fab fa-github"></i><p>GitHub</p></div>
           <div class="skill-item"><i class="fas fa-server"></i><p>API</p></div>
+          <div class="skill-item"><i class="fab fa-react"></i><p>React</p></div>
         </div>
         <h3>React Dictionary</h3>
         <p>
@@ -123,7 +140,7 @@
         <a href="https://candid-haupia-254c64.netlify.app/" target="_blank" class="btn btn-branding">Try it out</a>
       </div>
 
-         <!-- Project 6 -->
+         <!-- Project 7 -->
       <div class="col-md-4 project-card">
         <img src="img/movie.png" class="img-fluid project-img mb-3" alt="Generative AI Project">
         <div class="skills-grid mb-3">
