--- a/dev.html
+++ b/dev.html
@@ -80,16 +80,12 @@
         </div>
       </div>
 
-      <!-- Project Card 2 -->
+       <!-- Project Card 2 -->
       <div class="project-card">
-        <img src="img/const.jpg" alt="AI Recipe App" class="project-img">
+        <img src="img/foodapp.png" alt="Foodapp" class="project-img">
 
         <!-- Skills -->
         <div class="skills-grid">
-          <div class="skill-item">
-            <i class="fa-brands fa-js"></i>
-            <p>JavaScript</p>
-          </div>
           <div class="skill-item">
             <i class="fa-brands fa-html5"></i>
             <p>HTML</p>
@@ -98,15 +94,19 @@
             <i class="fa-brands fa-css3-alt"></i>
             <p>CSS</p>
           </div>
+          <div class="skill-item">
+            <i class="fa-brands fa-js"></i>
+            <p>JavaScript</p>
+          </div>
         </div>
 
         <div class="project-description">
-          <h3>AI Recipe App</h3>
+          <h3>Food App</h3>
           <p>
-            A generative AI recipe application designed to suggest creative and personalized meal ideas. The project demonstrates AI integration, user-friendly UI, and dynamic content creation.
+            This project is an ongoing project thats aim is to improve the user interface of my previous website. Intergrate voice input.
           </p>
-          <a href="#" class="btn btn-branding">No live link yet</a>
-          <a href="https://github.com/FedDawb/ai-recipe-app" target="_blank" class="btn btn-outline-dark mt-2">View on GitHub</a>
+          <a href="https://foodsion.netlify.app/" target="_blank" class="btn btn-branding">Try it out</a>
+          <a href="https://github.com/FedDawb/foodapp" target="_blank" class="btn btn-outline-dark mt-2">View on GitHub</a>
         </div>
       </div>
 
