fixed spelling mistake

--- a/work.html
+++ b/work.html
@@ -152,7 +152,7 @@
         </div>
         <h3>Movie Chooser Project</h3>
         <p>
-          Project completed in Python. Compbined front-end and back-end to build a site using API to fetch movies and data.
+          Project completed in Python. Combined front-end and back-end to build a site using API to fetch movies and data. This was built as a group project colaborating with other developers.
         </p>
         <a href="https://movie-chooser-hl45.onrender.com/" target="_blank" class="btn btn-branding">Try it out</a>
       </div>
